1.5/yaml/step2/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson4-ingress
  namespace: lesson4
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: ingress-k8s.midnas.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend
            port:
              number: 80
      - path: /api
        pathType: Exact
        backend:
          service:
            name: service-backend
            port:
              number: 80
